--- a/style.css
+++ b/style.css
@@ -26,12 +26,173 @@ body{
 	flex-direction: column;
 
 }
-body.ativo1{
+body.ativar1{
 	background-color: var(--cor2);
 }
-body.ativo1 .botao{
+body.ativar1 .botao{
 	background-color: var(--cor4);
 }
-body.ativo2{
+body.ativar2{
 	background-color: var(--cor3);
+}
+.alternar{
+	display: flex;
+	justify-content: space-between;
+}
+.direita{
+	display: flex;
+	justify-content: flex-end;
+}
+.alternar p{
+	margin: 0 5px;
+	color: #FFF;
+	cursor: pointer;
+}
+body.ativar1 .alternar h3{
+	color: #111;
+}
+body.ativar2 .alternar h3{
+	color: hsl(52, 100%, 62%);
+}
+h3{
+	color: #FFF;
+}
+.controle{
+	display: flex;
+	justify-content: flex-end;
+}
+.controle .box{
+	width: 60px;
+	height: 15px;
+	background-color: hsl(224, 36%, 15%);
+	border-radius: 30px;
+	margin-left: 4px;
+	position: relative;
+}
+body.ativar1 .controle .box{
+	background-color: var(--cor4);
+}
+body.ativar2 .controle #circle{
+	background-color: hsl(176, 100%, 44%);
+}
+.controle #circle{
+	width: 15px;
+	height: 15px;
+	background-color: hsl(6, 63%, 50%);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	border-radius: 30px;
+}
+body.ativar1 .controle #circle{
+	background-color: hsl(25, 98%, 40%);
+}
+.controle p{
+	color: #FFF;
+	cursor: pointer;
+	margin-direita: 4px;
+}
+body.ativar1 .controle p{
+	color: #111;
+}
+body.ativar1 .direita p{
+	color: #111;
+}
+body.ativar2 .controle p{
+	color: hsl(52, 100%, 62%);
+}
+body.ativar2 .direita p{
+	color: hsl(52, 100%, 62%);
+}
+.tela{
+	width: 450px;
+}
+#screen{
+	width: 100%;
+	height: 100px;
+	margin: 10px 0;
+	text-align: direita;
+	font-size: 32px;
+	background-color: hsl(224, 36%, 15%);
+	color: #FFF;
+	border: 0;
+	outline: none;
+	border-radius: 7px;
+}
+body.ativar1 #screen{
+	background-color: hsl(0, 0%, 93%);
+	color: #111;
+}
+body.ativar2 #screen{
+	background-color: var(--cor5);
+	color: hsl(52, 100%, 62%);
+}
+button{
+	width: 90px;
+    padding: 15px;
+    outline: none;
+    cursor: pointer;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 3px 0px 0px hsl(28, 16%, 65%);
+    margin: 10px 10px;
+    font-size: 32px;
+    color: ;
+}
+body.ativar1 button{
+	box-shadow: 0px 3px 0px 0px hsl(35, 11%, 61%);
+}
+body.ativar2 button{
+	box-shadow: 0px 3px 0px 0px hsl(268, 47%, 21%);
+	background-color: hsl(290, 70%, 36%);
+	color: hsl(52, 100%, 62%);
+}
+.botao{
+	display: flex;
+	width: 450px;
+	flex-flow: wrap;
+	background-color: hsl(224, 36%, 15%);
+	padding: 10px 5px;
+	margin: 8px 0;
+	border-radius: 7px;
+}
+body.ativar2 .botao{
+	background-color: var(--cor5);
+}
+.reset,.del{
+	box-shadow: 0px 3px 0px 0px hsl(224, 28%, 35%);
+	background-color: hsl(225, 21%, 49%);
+	color: #FFF;
+	font-size: 16px;
+}
+body.ativar1 .reset, body.ativar1 .del{
+	box-shadow: 0px 3px 0px 0px hsl(35, 11%, 61%);
+	background-color: hsl(185, 42%, 37%);
+}
+body.ativar2 .reset, body.ativar2 .del{
+	box-shadow: 0px 3px 0px 0px hsl(290, 70%, 36%);
+	background-color: hsl(268, 47%, 21%);
+	color: #fff;
+}
+.reset,.equal{
+	width: 200px;
+	color: #FFF;
+	font-size: 16px;
+}
+.equal{
+	box-shadow: 0px 3px 0px 0px hsl(6, 70%, 34%);
+	background-color: hsl(6, 63%, 50%);
+}
+body.ativar1 .equal{
+	box-shadow: 0px 3px 0px 0px hsl(25, 99%, 27%);
+	background-color: hsl(25, 98%, 40%);
+}
+body.ativar2 .equal{
+	box-shadow: 0px 3px 0px 0px hsl(177, 92%, 70%);
+	background-color: hsl(176, 100%, 44%);
+	color: #fff;
+}
+.num{
+
 }
