--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body.ativar1 .controle #circle{
 .controle p{
 	color: #FFF;
 	cursor: pointer;
-	margin-direita: 4px;
+	margin-right: 4px;
 }
 body.ativar1 .controle p{
 	color: #111;
@@ -112,13 +112,14 @@ body.ativar2 .direita p{
 	width: 100%;
 	height: 100px;
 	margin: 10px 0;
-	text-align: direita;
+	text-align: right;
 	font-size: 32px;
 	background-color: hsl(224, 36%, 15%);
 	color: #FFF;
 	border: 0;
 	outline: none;
 	border-radius: 7px;
+	padding: 20px;
 }
 body.ativar1 #screen{
 	background-color: hsl(0, 0%, 93%);
@@ -138,7 +139,6 @@ button{
     box-shadow: 0px 3px 0px 0px hsl(28, 16%, 65%);
     margin: 10px 10px;
     font-size: 32px;
-    color: ;
 }
 body.ativar1 button{
 	box-shadow: 0px 3px 0px 0px hsl(35, 11%, 61%);
@@ -192,7 +192,4 @@ body.ativar2 .equal{
 	box-shadow: 0px 3px 0px 0px hsl(177, 92%, 70%);
 	background-color: hsl(176, 100%, 44%);
 	color: #fff;
-}
-.num{
-
 }
